--- a/train.ipynb
+++ b/train.ipynb
@@ -3427,189 +3427,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>store_nbr</th>\n",
-       "      <th>family</th>\n",
-       "      <th>log_sales</th>\n",
-       "      <th>log_onpromotion</th>\n",
-       "      <th>city</th>\n",
-       "      <th>state</th>\n",
-       "      <th>store_type</th>\n",
-       "      <th>cluster</th>\n",
-       "      <th>dcoilwtico</th>\n",
-       "      <th>holiday_type</th>\n",
-       "      <th>locale</th>\n",
-       "      <th>locale_name</th>\n",
-       "      <th>description</th>\n",
-       "      <th>transferred</th>\n",
-       "      <th>log_transactions</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>AUTOMOTIVE</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Quito</td>\n",
-       "      <td>Pichincha</td>\n",
-       "      <td>D</td>\n",
-       "      <td>13</td>\n",
-       "      <td>67.714366</td>\n",
-       "      <td>Holiday</td>\n",
-       "      <td>National</td>\n",
-       "      <td>Ecuador</td>\n",
-       "      <td>Primer dia del ano</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7.29856</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>BABY CARE</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Quito</td>\n",
-       "      <td>Pichincha</td>\n",
-       "      <td>D</td>\n",
-       "      <td>13</td>\n",
-       "      <td>67.714366</td>\n",
-       "      <td>Holiday</td>\n",
-       "      <td>National</td>\n",
-       "      <td>Ecuador</td>\n",
-       "      <td>Primer dia del ano</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7.29856</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>BEAUTY</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Quito</td>\n",
-       "      <td>Pichincha</td>\n",
-       "      <td>D</td>\n",
-       "      <td>13</td>\n",
-       "      <td>67.714366</td>\n",
-       "      <td>Holiday</td>\n",
-       "      <td>National</td>\n",
-       "      <td>Ecuador</td>\n",
-       "      <td>Primer dia del ano</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7.29856</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>BEVERAGES</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Quito</td>\n",
-       "      <td>Pichincha</td>\n",
-       "      <td>D</td>\n",
-       "      <td>13</td>\n",
-       "      <td>67.714366</td>\n",
-       "      <td>Holiday</td>\n",
-       "      <td>National</td>\n",
-       "      <td>Ecuador</td>\n",
-       "      <td>Primer dia del ano</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7.29856</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>BOOKS</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>Quito</td>\n",
-       "      <td>Pichincha</td>\n",
-       "      <td>D</td>\n",
-       "      <td>13</td>\n",
-       "      <td>67.714366</td>\n",
-       "      <td>Holiday</td>\n",
-       "      <td>National</td>\n",
-       "      <td>Ecuador</td>\n",
-       "      <td>Primer dia del ano</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7.29856</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date  store_nbr      family  log_sales  log_onpromotion   city  \\\n",
-       "0  2013-01-01          1  AUTOMOTIVE        0.0              0.0  Quito   \n",
-       "1  2013-01-01          1   BABY CARE        0.0              0.0  Quito   \n",
-       "2  2013-01-01          1      BEAUTY        0.0              0.0  Quito   \n",
-       "3  2013-01-01          1   BEVERAGES        0.0              0.0  Quito   \n",
-       "4  2013-01-01          1       BOOKS        0.0              0.0  Quito   \n",
-       "\n",
-       "       state store_type  cluster  dcoilwtico holiday_type    locale  \\\n",
-       "0  Pichincha          D       13   67.714366      Holiday  National   \n",
-       "1  Pichincha          D       13   67.714366      Holiday  National   \n",
-       "2  Pichincha          D       13   67.714366      Holiday  National   \n",
-       "3  Pichincha          D       13   67.714366      Holiday  National   \n",
-       "4  Pichincha          D       13   67.714366      Holiday  National   \n",
-       "\n",
-       "  locale_name         description transferred  log_transactions  \n",
-       "0     Ecuador  Primer dia del ano       False           7.29856  \n",
-       "1     Ecuador  Primer dia del ano       False           7.29856  \n",
-       "2     Ecuador  Primer dia del ano       False           7.29856  \n",
-       "3     Ecuador  Primer dia del ano       False           7.29856  \n",
-       "4     Ecuador  Primer dia del ano       False           7.29856  "
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merge_train_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "many_col_oe = OneHotEncoder(sparse_output = False, handle_unknown = 'infrequent_if_exist')\n",
     "many_col_oe.fit(merge_train_df[[many_value_col[0]]])\n",
-    "family_df = pd.DataFrame(many_col_oe.transform(merge_train_df[[many_value_col[0]]]), columns = many_col_oe.get_feature_names_out())"
+    "train_family_df = pd.DataFrame(many_col_oe.transform(merge_train_df[[many_value_col[0]]]), columns = many_col_oe.get_feature_names_out())\n",
+    "test_family_df = pd.DataFrame(many_col_oe.transform(merge_test_df[[many_value_col[0]]]), columns = many_col_oe.get_feature_names_out())"
    ]
   },
   {
@@ -3629,7 +3454,7 @@
     }
    ],
    "source": [
-    "family_df.shape"
+    "train_family_df.shape"
    ]
   },
   {
@@ -3650,8 +3475,8 @@
    ],
    "source": [
     "family_pca = PCA(n_components=26)\n",
-    "family_pca.fit(family_df)\n",
-    "family_select_col = family_pca.transform(family_df)\n",
+    "family_pca.fit(train_family_df)\n",
+    "family_select_col = family_pca.transform(train_family_df)\n",
     "family_pca.explained_variance_ratio_.sum()"
    ]
   },
@@ -3681,12 +3506,12 @@
    "source": [
     "many_col_oe = OneHotEncoder(sparse_output = False, handle_unknown = 'infrequent_if_exist')\n",
     "many_col_oe.fit(merge_train_df[[many_value_col[1]]])\n",
-    "description_df = pd.DataFrame(many_col_oe.transform(merge_train_df[[many_value_col[1]]]), columns = many_col_oe.get_feature_names_out())\n",
-    "print(description_df.shape)\n",
+    "train_description_df = pd.DataFrame(many_col_oe.transform(merge_train_df[[many_value_col[1]]]), columns = many_col_oe.get_feature_names_out())\n",
+    "print(train_description_df.shape)\n",
     "\n",
     "description_pca = PCA(n_components=40)\n",
-    "description_pca.fit(description_df)\n",
-    "description_select_col = description_pca.transform(description_df)\n",
+    "description_pca.fit(train_description_df)\n",
+    "description_select_col = description_pca.transform(train_description_df)\n",
     "description_pca.explained_variance_ratio_.sum()"
    ]
   },
@@ -3698,7 +3523,7 @@
    "source": [
     "oe = OneHotEncoder(sparse_output = False, handle_unknown = 'infrequent_if_exist')\n",
     "oe.fit(merge_train_df[category_col])\n",
-    "oe_df = pd.DataFrame(oe.transform(merge_train_df[category_col]), columns = oe.get_feature_names_out())"
+    "train_oe_df = pd.DataFrame(oe.transform(merge_train_df[category_col]), columns = oe.get_feature_names_out())"
    ]
   },
   {
