--- a/train.ipynb
+++ b/train.ipynb
@@ -5329,7 +5329,6 @@
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.fft\n",
     "import torch.optim as optim\n",
     "from torch.utils.data import TensorDataset, DataLoader, Dataset"
    ]
@@ -5543,7 +5542,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RMSLE = $\\sqrt{ \\frac{1}{n} \\sum_{i=1}^n \\left(\\log (1 + \\hat{y}_i) - \\log (1 + y_i)\\right)^2}$"
+    "$RMSLE = \\sqrt{ \\frac{1}{n} \\sum_{i=1}^n \\left(\\log (1 + \\hat{y}_i) - \\log (1 + y_i)\\right)^2}$"
    ]
   },
   {
