--- a/test.ipynb
+++ b/test.ipynb
@@ -771,7 +771,7 @@
     "y_test_pred = pd.DataFrame(y_test_pred.cpu().detach().numpy())\n",
     "submission = pd.concat([test_df['id'], y_test_pred], axis = 1)\n",
     "submission.rename(columns={0:\"sales\"}, inplace=True)\n",
-    "submission['sales'] = np.expm1(submission['sales'])\n",
+    "submission['sales'] = np.expm1(submission['sales'])     # Predicted by log value\n",
     "submission"
    ]
   }
