--- a/train.ipynb
+++ b/train.ipynb
@@ -6543,7 +6543,7 @@
     }
    ],
    "source": [
-    "# y_val = pd.DataFrame(y_val.cpu().detach().numpy(), columns = ['log_sales'])\n",
+    "y_val = pd.DataFrame(y_val.cpu().detach().numpy(), columns = ['log_sales'])\n",
     "y_val_pred = xgbr.predict(merge_val_oe_df)\n",
     "rmsle = np.sqrt(np.mean((np.log1p(y_val_pred) - np.log1p(y_val['log_sales'])) ** 2))\n",
     "rmsle"
