--- a/test.ipynb
+++ b/test.ipynb
@@ -57,8 +57,8 @@
     "with open('models/scaler.pkl', 'rb') as f:\n",
     "    scaler = pickle.load(f)\n",
     "    \n",
-    "with open('models/weekday_oe.pkl', 'rb') as f:\n",
-    "    wd_oe = pickle.load(f)\n",
+    "with open('models/date_oe.pkl', 'rb') as f:\n",
+    "    date_oe = pickle.load(f)\n",
     "    \n",
     "with open('models/category_oe.pkl', 'rb') as f:\n",
     "    oe = pickle.load(f)\n",
@@ -151,7 +151,7 @@
     "# 카테고리 컬럼\n",
     "category_col = ['store_nbr', 'city', 'state', 'store_type', 'cluster', 'holiday_type', 'locale', 'locale_name', 'transferred', 'family', 'description']\n",
     "# 요일은 판매량에 큰 영향을 끼친다고 판단하여 pca에 따로 적용하지 않고 원핫인코딩만 함\n",
-    "weekday_col = ['weekday']"
+    "weekday_col = ['month', 'weekday']"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "outputs": [],
    "source": [
     "test_numeric_df = pd.DataFrame(scaler.transform(merge_test_df[numeric_col]), columns= scaler.get_feature_names_out())\n",
-    "test_wd_oe_df = pd.DataFrame(wd_oe.transform(merge_test_df[weekday_col]), columns = wd_oe.get_feature_names_out())\n",
+    "test_wd_oe_df = pd.DataFrame(date_oe.transform(merge_test_df[weekday_col]), columns = date_oe.get_feature_names_out())\n",
     "test_oe_df = pd.DataFrame(oe.transform(merge_test_df[category_col]), columns = oe.get_feature_names_out())"
    ]
   },
@@ -205,13 +205,13 @@
        "      <th>log_onpromotion</th>\n",
        "      <th>dcoilwtico</th>\n",
        "      <th>log_transactions</th>\n",
-       "      <th>weekday_0</th>\n",
-       "      <th>weekday_1</th>\n",
-       "      <th>weekday_2</th>\n",
-       "      <th>weekday_3</th>\n",
-       "      <th>weekday_4</th>\n",
-       "      <th>weekday_5</th>\n",
-       "      <th>weekday_6</th>\n",
+       "      <th>month_1</th>\n",
+       "      <th>month_2</th>\n",
+       "      <th>month_3</th>\n",
+       "      <th>month_4</th>\n",
+       "      <th>month_5</th>\n",
+       "      <th>month_6</th>\n",
+       "      <th>month_7</th>\n",
        "      <th>...</th>\n",
        "      <th>PC59_store_nbr_26</th>\n",
        "      <th>PC60_store_nbr_7</th>\n",
@@ -233,7 +233,7 @@
        "      <td>-0.007658</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -257,7 +257,7 @@
        "      <td>-0.007658</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -281,7 +281,7 @@
        "      <td>-0.007658</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -305,7 +305,7 @@
        "      <td>-0.007658</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -329,7 +329,7 @@
        "      <td>-0.007658</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -378,7 +378,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -402,7 +402,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -426,7 +426,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -450,7 +450,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -474,7 +474,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -492,89 +492,76 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>28512 rows × 78 columns</p>\n",
+       "<p>28512 rows × 90 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       log_onpromotion  dcoilwtico  log_transactions  weekday_0  weekday_1  \\\n",
-       "0            -0.336705   -1.097735         -0.007658        0.0        0.0   \n",
-       "1            -0.336705   -1.097735         -0.007658        0.0        0.0   \n",
-       "2             1.217904   -1.097735         -0.007658        0.0        0.0   \n",
-       "3             3.971496   -1.097735         -0.007658        0.0        0.0   \n",
-       "4            -0.336705   -1.097735         -0.007658        0.0        0.0   \n",
-       "...                ...         ...               ...        ...        ...   \n",
-       "28507         0.644144   -1.077038         -0.007658        0.0        0.0   \n",
-       "28508        -0.336705   -1.077038         -0.007658        0.0        0.0   \n",
-       "28509         0.644144   -1.077038         -0.007658        0.0        0.0   \n",
-       "28510         2.921606   -1.077038         -0.007658        0.0        0.0   \n",
-       "28511        -0.336705   -1.077038         -0.007658        0.0        0.0   \n",
+       "       log_onpromotion  dcoilwtico  log_transactions  month_1  month_2  \\\n",
+       "0            -0.336705   -1.097735         -0.007658      0.0      0.0   \n",
+       "1            -0.336705   -1.097735         -0.007658      0.0      0.0   \n",
+       "2             1.217904   -1.097735         -0.007658      0.0      0.0   \n",
+       "3             3.971496   -1.097735         -0.007658      0.0      0.0   \n",
+       "4            -0.336705   -1.097735         -0.007658      0.0      0.0   \n",
+       "...                ...         ...               ...      ...      ...   \n",
+       "28507         0.644144   -1.077038         -0.007658      0.0      0.0   \n",
+       "28508        -0.336705   -1.077038         -0.007658      0.0      0.0   \n",
+       "28509         0.644144   -1.077038         -0.007658      0.0      0.0   \n",
+       "28510         2.921606   -1.077038         -0.007658      0.0      0.0   \n",
+       "28511        -0.336705   -1.077038         -0.007658      0.0      0.0   \n",
        "\n",
-       "       weekday_2  weekday_3  weekday_4  weekday_5  weekday_6  ...  \\\n",
-       "0            1.0        0.0        0.0        0.0        0.0  ...   \n",
-       "1            1.0        0.0        0.0        0.0        0.0  ...   \n",
-       "2            1.0        0.0        0.0        0.0        0.0  ...   \n",
-       "3            1.0        0.0        0.0        0.0        0.0  ...   \n",
-       "4            1.0        0.0        0.0        0.0        0.0  ...   \n",
-       "...          ...        ...        ...        ...        ...  ...   \n",
-       "28507        0.0        1.0        0.0        0.0        0.0  ...   \n",
-       "28508        0.0        1.0        0.0        0.0        0.0  ...   \n",
-       "28509        0.0        1.0        0.0        0.0        0.0  ...   \n",
-       "28510        0.0        1.0        0.0        0.0        0.0  ...   \n",
-       "28511        0.0        1.0        0.0        0.0        0.0  ...   \n",
+       "       month_3  month_4  month_5  month_6  month_7  ...  PC59_store_nbr_26  \\\n",
+       "0          0.0      0.0      0.0      0.0      0.0  ...          -0.061389   \n",
+       "1          0.0      0.0      0.0      0.0      0.0  ...          -0.076683   \n",
+       "2          0.0      0.0      0.0      0.0      0.0  ...          -0.070329   \n",
+       "3          0.0      0.0      0.0      0.0      0.0  ...          -0.063846   \n",
+       "4          0.0      0.0      0.0      0.0      0.0  ...          -0.074606   \n",
+       "...        ...      ...      ...      ...      ...  ...                ...   \n",
+       "28507      0.0      0.0      0.0      0.0      0.0  ...           0.107158   \n",
+       "28508      0.0      0.0      0.0      0.0      0.0  ...           0.101067   \n",
+       "28509      0.0      0.0      0.0      0.0      0.0  ...           0.099046   \n",
+       "28510      0.0      0.0      0.0      0.0      0.0  ...           0.095917   \n",
+       "28511      0.0      0.0      0.0      0.0      0.0  ...           0.101266   \n",
        "\n",
-       "       PC59_store_nbr_26  PC60_store_nbr_7  PC61_store_nbr_6  \\\n",
-       "0              -0.061389          0.172316         -0.275387   \n",
-       "1              -0.076683          0.172316         -0.275387   \n",
-       "2              -0.070329          0.172316         -0.275387   \n",
-       "3              -0.063846          0.172316         -0.275387   \n",
-       "4              -0.074606          0.172316         -0.275387   \n",
-       "...                  ...               ...               ...   \n",
-       "28507           0.107158          0.000076         -0.000183   \n",
-       "28508           0.101067          0.000076         -0.000183   \n",
-       "28509           0.099046          0.000076         -0.000183   \n",
-       "28510           0.095917          0.000076         -0.000183   \n",
-       "28511           0.101266          0.000076         -0.000183   \n",
+       "       PC60_store_nbr_7  PC61_store_nbr_6  PC62_store_nbr_38  \\\n",
+       "0              0.172316         -0.275387          -0.011739   \n",
+       "1              0.172316         -0.275387          -0.011739   \n",
+       "2              0.172316         -0.275387          -0.011739   \n",
+       "3              0.172316         -0.275387          -0.011739   \n",
+       "4              0.172316         -0.275387          -0.011739   \n",
+       "...                 ...               ...                ...   \n",
+       "28507          0.000076         -0.000183          -0.000183   \n",
+       "28508          0.000076         -0.000183          -0.000183   \n",
+       "28509          0.000076         -0.000183          -0.000183   \n",
+       "28510          0.000076         -0.000183          -0.000183   \n",
+       "28511          0.000076         -0.000183          -0.000183   \n",
        "\n",
-       "       PC62_store_nbr_38  PC63_store_nbr_21  PC64_store_nbr_54  \\\n",
-       "0              -0.011739           0.097562          -0.147920   \n",
-       "1              -0.011739           0.097562          -0.147920   \n",
-       "2              -0.011739           0.097562          -0.147920   \n",
-       "3              -0.011739           0.097562          -0.147920   \n",
-       "4              -0.011739           0.097562          -0.147920   \n",
+       "       PC63_store_nbr_21  PC64_store_nbr_54  PC65_store_nbr_30  \\\n",
+       "0               0.097562          -0.147920           0.000938   \n",
+       "1               0.097562          -0.147920           0.000938   \n",
+       "2               0.097562          -0.147920           0.000938   \n",
+       "3               0.097562          -0.147920           0.000938   \n",
+       "4               0.097562          -0.147920           0.000938   \n",
        "...                  ...                ...                ...   \n",
-       "28507          -0.000183          -0.000290          -0.000718   \n",
-       "28508          -0.000183          -0.000290          -0.000718   \n",
-       "28509          -0.000183          -0.000290          -0.000718   \n",
-       "28510          -0.000183          -0.000290          -0.000718   \n",
-       "28511          -0.000183          -0.000290          -0.000718   \n",
+       "28507          -0.000290          -0.000718          -0.000353   \n",
+       "28508          -0.000290          -0.000718          -0.000353   \n",
+       "28509          -0.000290          -0.000718          -0.000353   \n",
+       "28510          -0.000290          -0.000718          -0.000353   \n",
+       "28511          -0.000290          -0.000718          -0.000353   \n",
        "\n",
-       "       PC65_store_nbr_30  PC66_store_nbr_2  PC67_store_nbr_49  \\\n",
-       "0               0.000938         -0.183020          -0.301699   \n",
-       "1               0.000938         -0.183020          -0.301699   \n",
-       "2               0.000938         -0.183020          -0.301699   \n",
-       "3               0.000938         -0.183020          -0.301699   \n",
-       "4               0.000938         -0.183020          -0.301699   \n",
-       "...                  ...               ...                ...   \n",
-       "28507          -0.000353          0.001791           0.000967   \n",
-       "28508          -0.000353          0.001791           0.000967   \n",
-       "28509          -0.000353          0.001791           0.000967   \n",
-       "28510          -0.000353          0.001791           0.000967   \n",
-       "28511          -0.000353          0.001791           0.000967   \n",
+       "       PC66_store_nbr_2  PC67_store_nbr_49  PC68_store_nbr_35  \n",
+       "0             -0.183020          -0.301699           0.117077  \n",
+       "1             -0.183020          -0.301699           0.117077  \n",
+       "2             -0.183020          -0.301699           0.117077  \n",
+       "3             -0.183020          -0.301699           0.117077  \n",
+       "4             -0.183020          -0.301699           0.117077  \n",
+       "...                 ...                ...                ...  \n",
+       "28507          0.001791           0.000967          -0.012860  \n",
+       "28508          0.001791           0.000967          -0.012860  \n",
+       "28509          0.001791           0.000967          -0.012860  \n",
+       "28510          0.001791           0.000967          -0.012860  \n",
+       "28511          0.001791           0.000967          -0.012860  \n",
        "\n",
-       "       PC68_store_nbr_35  \n",
-       "0               0.117077  \n",
-       "1               0.117077  \n",
-       "2               0.117077  \n",
-       "3               0.117077  \n",
-       "4               0.117077  \n",
-       "...                  ...  \n",
-       "28507          -0.012860  \n",
-       "28508          -0.012860  \n",
-       "28509          -0.012860  \n",
-       "28510          -0.012860  \n",
-       "28511          -0.012860  \n",
-       "\n",
-       "[28512 rows x 78 columns]"
+       "[28512 rows x 90 columns]"
       ]
      },
      "execution_count": 11,
@@ -623,7 +610,7 @@
       "text/plain": [
        "LinearModel(\n",
        "  (layer): Sequential(\n",
-       "    (0): Linear(in_features=78, out_features=128, bias=True)\n",
+       "    (0): Linear(in_features=90, out_features=128, bias=True)\n",
        "    (1): ReLU()\n",
        "    (2): Linear(in_features=128, out_features=64, bias=True)\n",
        "    (3): ReLU()\n",
@@ -640,7 +627,7 @@
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "model = LinearModel(input_features= merge_test_oe_df.shape[1], out_features= 1, hidden_dim_1= 128, hidden_dim_2= 64).to(device)\n",
-    "model.load_state_dict(torch.load('models/linear_model4.pt'))\n",
+    "model.load_state_dict(torch.load('models/linear_model5.pt'))\n",
     "model.eval()"
    ]
   },
@@ -687,27 +674,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>3000888</td>\n",
-       "      <td>6.194175</td>\n",
+       "      <td>0.654921</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>3000889</td>\n",
-       "      <td>3.917503</td>\n",
+       "      <td>24.229820</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3000890</td>\n",
-       "      <td>7.732124</td>\n",
+       "      <td>50.643707</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3000891</td>\n",
-       "      <td>13.415877</td>\n",
+       "      <td>71.849518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>3000892</td>\n",
-       "      <td>31143.876953</td>\n",
+       "      <td>1.114651</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -717,27 +704,27 @@
        "    <tr>\n",
        "      <th>28507</th>\n",
        "      <td>3029395</td>\n",
-       "      <td>66.027687</td>\n",
+       "      <td>0.114332</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28508</th>\n",
        "      <td>3029396</td>\n",
-       "      <td>7.029910</td>\n",
+       "      <td>697.779358</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28509</th>\n",
        "      <td>3029397</td>\n",
-       "      <td>18.800280</td>\n",
+       "      <td>130.526535</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28510</th>\n",
        "      <td>3029398</td>\n",
-       "      <td>150.707031</td>\n",
+       "      <td>64.041496</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28511</th>\n",
        "      <td>3029399</td>\n",
-       "      <td>2.492731</td>\n",
+       "      <td>248.794830</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -745,18 +732,18 @@
        "</div>"
       ],
       "text/plain": [
-       "            id         sales\n",
-       "0      3000888      6.194175\n",
-       "1      3000889      3.917503\n",
-       "2      3000890      7.732124\n",
-       "3      3000891     13.415877\n",
-       "4      3000892  31143.876953\n",
-       "...        ...           ...\n",
-       "28507  3029395     66.027687\n",
-       "28508  3029396      7.029910\n",
-       "28509  3029397     18.800280\n",
-       "28510  3029398    150.707031\n",
-       "28511  3029399      2.492731\n",
+       "            id       sales\n",
+       "0      3000888    0.654921\n",
+       "1      3000889   24.229820\n",
+       "2      3000890   50.643707\n",
+       "3      3000891   71.849518\n",
+       "4      3000892    1.114651\n",
+       "...        ...         ...\n",
+       "28507  3029395    0.114332\n",
+       "28508  3029396  697.779358\n",
+       "28509  3029397  130.526535\n",
+       "28510  3029398   64.041496\n",
+       "28511  3029399  248.794830\n",
        "\n",
        "[28512 rows x 2 columns]"
       ]
